# OpenGL_Tutorial_Series2-23_12_24

./: .gitignore  .gitmodules  INFO.md  README.md
_src_versions/_EP11A-start/src/: config.cpp  main.cpp
_src_versions/_EP11B-debugging/: CMakeLists.txt
_src_versions/_EP11B-debugging/src/: config.h  main.cpp
_src_versions/_EP12A-start/: CMakeLists.txt
_src_versions/_EP12A-start/src/: config.h  main.cpp
_src_versions/_EP12B-post_processing/: CMakeLists.txt
_src_versions/_EP13B-clearing_screen/src/: config.h
_src_versions/_EP13C-one_sphere/: CMakeLists.txt
_src_versions/_EP13C-one_sphere/src/: main.cpp
_src_versions/_EP13C-one_sphere/src/components/: component_set.h
_src_versions/_EP13C-one_sphere/src/controller/: app.cpp
_src_versions/_EP13C-one_sphere/src/factories/: factory.h  texture_factory.cpp
_src_versions/_EP13C-one_sphere/src/shaders/: fragment.txt  raytracer.txt
_src_versions/_EP13C-one_sphere/src/systems/: camera_system.cpp  camera_system.h  render_system.cpp  render_system.h
_src_versions/_EP13C-one_sphere/src/view/: shader.h
_src_versions/_EP14-image_arrays/: CMakeLists.txt
_src_versions/_EP14-image_arrays/src/: config.h  main.cpp
_src_versions/_EP14-image_arrays/src/backend/: shader.cpp  shader.h
_src_versions/_EP14-image_arrays/src/components/: component_set.h  components.h
_src_versions/_EP14-image_arrays/src/controller/: app.h
_src_versions/_EP14-image_arrays/src/factories/: factory.h  model_factory.h
_src_versions/_EP14-image_arrays/src/systems/: render.cpp  world.h
_src_versions/_EP1A-setting_up/core/: CMakeLists.txt
_src_versions/_EP1B/core/: CMakeLists.txt
_src_versions/_EP2B_by_Ebs/src/: config.h  main.cpp  triangle_mesh.cpp  triangle_mesh.h
_src_versions/_EP3A-vertex_buffers/src/: main.cpp  triangle_mesh.cpp  triangle_mesh.h
_src_versions/_EP3B/src/: triangle_mesh.cpp
_src_versions/_EP3C/: CMakeLists.txt
_src_versions/_EP3C/src/: triangle_mesh.cpp  triangle_mesh.h
_src_versions/_EP3D/src/: main.cpp  triangle_mesh.cpp
_src_versions/_EP4A-textures/src/: main.cpp  material.cpp  material.h  triangle_mesh.cpp
_src_versions/_EP4B/: CMakeLists.txt
_src_versions/_EP4B/src/: main.cpp  triangle_mesh.cpp
_src_versions/_EP5A-transformations/src/: linear_maths.cpp  linear_maths.h  main.cpp  material.cpp
_src_versions/_EP5B/: CMakeLists.txt
_src_versions/_EP5B/src/: linear_maths.cpp  linear_maths.h  main.cpp
_src_versions/_EP5C/src/: linear_maths.cpp  linear_maths.h  main.cpp
_src_versions/_EP5D/src/: linear_maths.cpp  linear_maths.h  main.cpp  triangle_mesh.cpp  triangle_mesh.h
_src_versions/_EP5E/: CMakeLists.txt
_src_versions/_EP5E/src/: config.cpp  config.h  main.cpp  material.h
_src_versions/_EP6A-objected_oriented/: CMakeLists.txt
_src_versions/_EP6A-objected_oriented/src/: camera.h  cube.cpp  cube.h  main.cpp
_src_versions/_EP6B-mvc_method/: CMakeLists.txt
_src_versions/_EP6B-mvc_method/src/: config.h  glad.c  (+1 more)
_src_versions/_EP6C-ecs_method/: CMakeLists.txt
_src_versions/_EP7B/: CMakeLists.txt
_src_versions/_EP8A-animating_models/: CMakeLists.txt
_src_versions/_EP8A-animating_models/src/: config.h  main.cpp
_src_versions/_EP8A-animating_models/src/controller/: app.h
_src_versions/_EP8A-animating_models/src/factories/: factory.cpp  factory.h  mesh_factory.cpp  mesh_factory.h
_src_versions/_EP8A-animating_models/src/shaders/: vertex.txt
_src_versions/_EP8A-animating_models/src/systems/: motion_system.cpp  render_system.h
_src_versions/_EP8B-animating/: CMakeLists.txt
_src_versions/_EP9D-batch_rendering-paper_world_v2/: CMakeLists.txt
_src_versions/_EP9E-batch_rendering-complete/: CMakeLists.txt
core/src/: config.cpp  config.h
(+204 files in other folders)
